
2009-08-15  Sancho lerena <slerena@artica.es>

	* util/tentacle_serverd: Call to umask to let tentacle_server create
	files with mask 0007, because Enterprise version need to write files
	fetched with tentacle.

2009-08-12  sancho Lerena <slerena@artica.es>

	* pandora_server: Added LSB tags to startup daemon for SUSE

2009-08-11  Sancho Lerena <slerena@artica.es>

	* pandora_server: Using new method to get PID of process, compatible with
	any distro (SUSE problems reported). Removed old stuff and updated headers.
	
	* pandora_server_installer: A lot of improvementes and added separated code
	for Ubuntu/Debian and SUSE targets. Fixed some minor bugs reported.
	
	* bin/pandora_server: Added a new die handled for manage crashes and report
	more information into logs and console on startup. This helps to determine
	some common problems.
	
	* Config.pm: Updated version number.
	
	* util/tentacle_serverd: Fixed startup script to work also in SUSE. New
	code for getpid compatible with all distros.

	* Makefile.PL,  NetworkServer.pm: Removed Net::Ping dependency, 
	not used anymore. Pending to remove Date::Manip from pandora_db script.
	
2009-08-09  Sancho Lerena <slerena@artica.es>

        * pandora_server.conf: Removed deprecated parameter: Alert_threshold.

2009-08-04  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm,
	  lib/PandoraFMS/ReconServer.pm,
	  lib/PandoraFMS/DataServer.pm: Set group, description and post_process
	  when auto-creating an agent/module. 

2009-08-03  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Add id_agente to tagente_estado when
	  creating a new module.

	* lib/PandoraFMS/DataServer.pm: Added support for inventory XML files.

	* lib/PandoraFMS/Tools.pm: Moved get_tag_value function from
	  DataServer.pm to Tools.pm.

2009-07-30  Manuel Arostegui  <manuel@todo-linux.com>

	* SLES10/pandora_wmi, pandora_plugin, pandora_prediction
	pandora_snmpconsole, pandora_recon, pandora_server