@@ -11,7 +11,7 @@
 # Default-Stop: 0 1 2 3 5
 # Required-Start: $network
 # Required-Stop: $network
-# Description: Tentacle Server startup script
+# Short-Description: Tentacle Server startup script
 ### END INIT INFO
 
 # Pandora server settings
